# totato

./: .gitignore  ruff.toml
backend/: engine.py  pyproject.toml  requirements.txt  server.py  test_api.py  test_engine.py  test_helpers.py
docs/: explorer.md  scorer.md
frontend/: biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/app/scorer/: page.tsx
frontend/src/components/: Explorer.tsx  Nav.tsx  ParamsPanel.tsx  Scorer.tsx  TokenEditor.tsx  TokenHeatmap.tsx  TokenList.tsx
frontend/src/lib/: api.ts  format.tsx
